# KRISHIMIND-AI

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
agents/crop/crop_planning_agent/: service.py
agents/crop/disease_detection/: service.py
agents/crop/fertilizer_agent/: service.py
agents/crop/harvest_agent/: service.py
agents/crop/image_analysis/: config.py  main.py  schemas.py  service.py  tools.py
agents/crop/soil_agent/: service.py
agents/crop/weather_agent/: service.py
agents/livestock/health_agent/: service.py
agents/market/price_forecast_agent/: service.py
apps/api_gateway/: config.py  deps.py  main.py
apps/api_gateway/middleware/: cors.py  logging.py  rate_limit.py
apps/api_gateway/routes/: agents.py  auth.py  chat.py  health.py
apps/chatbot_orchestrator/: config.py  main.py
apps/chatbot_orchestrator/graphs/: chatbot_graph.py
apps/chatbot_orchestrator/memory/: farm_profile_store.py  redis_store.py  vector_memory.py
apps/chatbot_orchestrator/router/: intent_classifier.py
apps/chatbot_orchestrator/synthesis/: aggregator.py  explainer.py
apps/core/: settings.py
apps/db/: dependencies.py  init_db.py  session.py
apps/db/models/: conversation.py  image_analysis.py  message.py  user.py
apps/db/repositories/: conversation_repository.py  image_analysis_repository.py  init.py  repository_dependencies.py  user_repository.py
apps/db/schemas/: auth.py  chat.py  conversation.py  image_analysis_schemas.py  message.py
apps/db/services/: __init__.py  auth_service.py  chat_service.py  image_analysis_service.py
apps/web_frontend/: index.html  package-lock.json  package.json  tailwind.config.js
apps/web_frontend/src/: App.jsx  index.css
apps/web_frontend/src/components/: Layout.jsx  Logo.jsx  Sidebar.jsx  Topbar.jsx
apps/web_frontend/src/pages/: Chat.jsx  CropAnalysis.jsx  Dashboard.jsx  KnowledgeBase.jsx  Livestock.jsx  Login.jsx  MarketIntelligence.jsx  Settings.jsx  Signup.jsx  SoilFertilizer.jsx  WeatherRisk.jsx
apps/web_frontend/src/services/: api.js
apps/web_frontend/src/store/: authStore.js
krishimind_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mcp/: auth.py  base_server.py  client.py  tool_registry.py
orchestration/: fallback_manager.py  parallel_executor.py  retry_manager.py
rag/generation/: answer_generator.py
rag/ingestion/: loaders.py
rag/pipelines/: rag_pipeline.py
rag/retrieval/: retriever.py
shared copy/auth/: jwt.py
shared copy/utils/: logging.py
shared/auth/: user_store.py
shared/constants/: app.py
shared/llm/: client.py
shared/schemas/: chat.py
shared/utils/: logging.py
tests/unit/: test_intent_classifier.py  test_rag_pipeline.py
