[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krishimind-ai"
version = "0.1.0"
description = "AI-powered agricultural intelligence platform with multi-agent orchestration, RAG, MCP, CV, forecasting, and conversational AI."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }

authors = [
  { name = "KrishiMind AI Team" }
]

keywords = [
  "agriculture",
  "ai",
  "genai",
  "rag",
  "langgraph",
  "fastapi",
  "computer-vision",
  "forecasting",
  "llm",
  "multi-agent",
  "mcp",
]

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Framework :: FastAPI",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  # =========================================================
  # CORE API + CONFIG
  # =========================================================
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "starlette>=0.40.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "python-dotenv>=1.0.1",
  "httpx>=0.27.0",
  "aiofiles>=24.1.0",
  "python-multipart>=0.0.9",
  "orjson>=3.10.0",

  # =========================================================
  # LANGCHAIN + LANGGRAPH + LLM
  # =========================================================
  "langchain>=0.3.0",
  "langchain-core>=0.3.0",
  "langchain-community>=0.3.0",
  "langgraph>=0.2.30",
  "litellm>=1.48.0",
  "openai>=1.45.0",
  "tiktoken>=0.7.0",

  # =========================================================
  # VECTOR DATABASE + EMBEDDINGS
  # =========================================================
  "qdrant-client>=1.11.0",
  "sentence-transformers>=3.0.1",
  "faiss-cpu>=1.8.0.post1",

  # =========================================================
  # REDIS + CACHE + TASKS
  # =========================================================
  "redis>=5.0.8",
  "celery>=5.4.0",
  "flower>=2.0.1",

  # =========================================================
  # DATABASES
  # =========================================================
  "sqlalchemy>=2.0.35",
  "alembic>=1.13.2",
  "asyncpg>=0.29.0",
  "psycopg2-binary>=2.9.9",

  # =========================================================
  # MACHINE LEARNING + DATA
  # =========================================================
  "numpy>=1.26.4",
  "pandas>=2.2.2",
  "scikit-learn>=1.5.1",
  "scipy>=1.14.1",
  "joblib>=1.4.2",

  # =========================================================
  # COMPUTER VISION
  # =========================================================
  "opencv-python>=4.10.0.84",
  "pillow>=10.4.0",
  "ultralytics>=8.2.82",
  "torch>=2.4.1",
  "torchvision>=0.19.1",
  "timm>=1.0.9",

  # =========================================================
  # RAG + DOCUMENT PROCESSING
  # =========================================================
  "pypdf>=5.0.0",
  "unstructured>=0.15.0",
  "beautifulsoup4>=4.12.3",
  "lxml>=5.3.0",

  # =========================================================
  # WEATHER + GEO + AGRI DATA
  # =========================================================
  "geopy>=2.4.1",
  "xgboost>=2.1.1",
  "prophet>=1.1.6",

  # =========================================================
  # STORAGE
  # =========================================================
  "boto3>=1.35.18",
  "minio>=7.2.8",

  # =========================================================
  # AUTH + SECURITY
  # =========================================================
  "python-jose[cryptography]>=3.3.0",
  "passlib[bcrypt]>=1.7.4",

  # =========================================================
  # OBSERVABILITY + LOGGING
  # =========================================================
  "loguru>=0.7.2",
  "prometheus-client>=0.20.0",
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",

  # =========================================================
  # EVALUATION
  # =========================================================
  "deepeval>=1.1.4",
  "ragas>=0.1.20",

  # =========================================================
  # UTILITIES
  # =========================================================
  "tenacity>=9.0.0",
  "pyyaml>=6.0.2",
  "networkx>=3.3",
]

[project.optional-dependencies]

dev = [
  "pytest>=8.3.2",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "black>=24.8.0",
  "ruff>=0.6.5",
  "mypy>=1.11.2",
  "pre-commit>=3.8.0",
]

jupyter = [
  "jupyterlab>=4.2.5",
  "ipykernel>=6.29.5",
]

gpu = [
  "torch>=2.4.1",
  "torchvision>=0.19.1",
]

docs = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.5.34",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = [
  "apps*",
  "agents*",
  "rag*",
  "mcp*",
  "ml*",
  "shared*",
  "orchestration*",
  "observability*",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
  "E",
  "F",
  "I",
  "B",
]

ignore = [
  "E501",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
  "tests",
]

[tool.coverage.run]
source = [
  "apps",
  "agents",
  "rag",
  "mcp",
  "ml",
]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

# =========================================================
# CUSTOM TOOL CONFIGS
# =========================================================

[tool.krishimind]
environment = "development"
default_llm = "gpt-4o-mini"
default_embedding_model = "sentence-transformers/all-MiniLM-L6-v2"
vector_db = "qdrant"
orchestrator = "langgraph"
memory_store = "redis"
evaluation_enabled = true